--- a/web-developer.html
+++ b/web-developer.html
@@ -38,11 +38,15 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://artisantalent.com/jobs/indianapolis/strategic-market-director/46131?utm_content=104387970&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
+<h5><a href='https://boards.greenhouse.io/circleci/jobs/4497096002'>Job Application for Senior Engineer - Web Development & Optimization at CircleCI</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://artisantalent.com/jobs/indianapolis/strategic-market-director/46131?utm_content=104387970&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
+<p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/HazteOirorg/743999684921275-web-developer-with-experience-in-php-mysql-css-javascript'>HazteOir.org Web developer with experience in PHP, MySQL, CSS, JavaScript | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HazteOirorg/743999684921275-web-developer-with-experience-in-php-mysql-css-javascript'>HazteOir.org Web developer with experience in PHP, MySQL, CSS, JavaScript | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Madrid Madrid, Spain Madrid Madrid</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -74,7 +78,7 @@
 <p><span class="badge badge-light">Malm?Copenhagen</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://monetizem.applytojob.com/apply/gO6r4Zsetn/Web-Developer-fully-Remote'>Web Developer (fully remote) - MonetizeMore - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://monetizem.applytojob.com/apply/gO6r4Zsetn/Web-Developer-fully-Remote'>Web Developer (fully remote) - MonetizeMore - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -206,7 +210,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/pandell/j/D1A17EAA7C/'>Full Stack Web Developers - Pandell</a></h5> 
+<h5><a href='https://apply.workable.com/pandell/j/D1A17EAA7C/'>Full Stack Web Developers - Pandell</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -306,7 +310,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
-<h5><a href='https://serviceplan.softgarden.io/job/1175416/Werkstudent-Web-Development-E-Dialog-m-w-x-?jobDbPVId=14270842&amp;l=en'>Werkstudent Web Development / E-Dialog (m/w/x)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://serviceplan.softgarden.io/job/1175416/Werkstudent-Web-Development-E-Dialog-m-w-x-?jobDbPVId=14270842&amp;l=en'>Werkstudent Web Development / E-Dialog (m/w/x)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -405,7 +409,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/treasure-data/917e1a35-c960-4dc7-ac6f-0150a72b7091'>Arm Treasure Data - Senior Web Backend API Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/treasure-data/917e1a35-c960-4dc7-ac6f-0150a72b7091'>Arm Treasure Data - Senior Web Backend API Developer</a></h5> 
 <p><span class="badge badge-light">Vancouver, BC</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -421,7 +425,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light">Boulder, Colorado</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talpasolutions.join.com/jobs/453527-web-developer-front-end'>Job @ talpasolutions (Essen): Web Developer (Front... | JOIN</a></h5> 
+<h5><a href='https://talpasolutions.join.com/jobs/453527-web-developer-front-end'>Job @ talpasolutions (Essen): Web Developer (Front... | JOIN</a></h5> 
 <p><span class="badge badge-light">Essen, Germany</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -429,7 +433,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/DenodoTechnologies/743999697932447-java-back-end-front-end-web-developer'>Denodo Technologies Java Back End / Front End Web Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DenodoTechnologies/743999697932447-java-back-end-front-end-web-developer'>Denodo Technologies Java Back End / Front End Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">A Coru?a, Spain</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -452,12 +456,6 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <h5><a href='https://jobs.smartrecruiters.com/NorthgatePublicServices/743999697969975-senior-web-developer-angular'>Northgate Public Services Senior Web Developer - Angular | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
-<hr/>
-<h5><a href='https://careers.chenegamios.com/columbia-md/front-end-web-developer/11050BC8CF6448308A332C1FAC0A4666/job/'>
-Chenega Corporation Jobs - Front End Web Developer in Columbia, Maryland, United States
-</a></h5> 
-<p><span class="badge badge-light">United States  Columbia, Maryland</span></p>
-<p>Posted on:: 2019-10-23</p>
 <hr/>
 
 
