--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -48,7 +48,7 @@
 <p><span class="badge badge-light">Portland, Oregon  Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://pubnative.join.com/jobs/466577-senior-site-reliability-engineer-m-f-div'>Job @ PubNative (Berlin): Senior Site Reliability ... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pubnative.join.com/jobs/466577-senior-site-reliability-engineer-m-f-div'>Job @ PubNative (Berlin): Senior Site Reliability ... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -60,11 +60,11 @@
 <p><span class="badge badge-light">Munich Munich M?nchen</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/OteemoInc/743999698292259-sr-site-reliability-engineer-devsecops'>Oteemo, Inc Sr. Site Reliability Engineer, DevSecOps | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/OteemoInc/743999698292259-sr-site-reliability-engineer-devsecops'>Oteemo, Inc Sr. Site Reliability Engineer, DevSecOps | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/blizzard/job/opinbfwZ'>Blizzard Entertainment Careers - Manager, Site Reliability Engineering</a></h5> 
+<h5><a href='https://jobs.jobvite.com/blizzard/job/opinbfwZ'>Blizzard Entertainment Careers - Manager, Site Reliability Engineering</a></h5> 
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -174,7 +174,7 @@
 <p><span class="badge badge-light">Pittsburgh</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/OteemoInc/743999697980374-sr-site-reliability-engineer-devsecops'>Oteemo, Inc Sr. Site Reliability Engineer, DevSecOps | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/OteemoInc/743999697980374-sr-site-reliability-engineer-devsecops'>Oteemo, Inc Sr. Site Reliability Engineer, DevSecOps | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -368,7 +368,7 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oMbuafwl&__jvst=Employee+Referral&__jvsd=stbvlgwf&__jvsc=Twitter&bid=nCgecMwz'>ServiceNow Careers - Site Reliability Engineer Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oMbuafwl&__jvst=Employee+Referral&__jvsd=stbvlgwf&__jvsc=Twitter&bid=nCgecMwz'>ServiceNow Careers - Site Reliability Engineer Intern</a></h5> 
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on:: 2019-10-17</p>
 <hr/>
@@ -376,7 +376,7 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on:: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://imanagecom.applytojob.com/apply/gmLDtRpHvf/Senior-Site-Reliability-Engineer'>Senior Site Reliability Engineer - iManage - Career Page</a></h5> 
+<h5><a href='http://imanagecom.applytojob.com/apply/gmLDtRpHvf/Senior-Site-Reliability-Engineer'>Senior Site Reliability Engineer - iManage - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -388,7 +388,7 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/smarsh/job/o377afwb'>Smarsh Careers - Site Reliability Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/smarsh/job/o377afwb'>Smarsh Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon  Atlanta, Georgia</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -424,11 +424,11 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on:: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mozilla/jobs/1916139'>Job Application for Senior Site Reliability Engineer at Mozilla</a></h5> 
+<h5><a href='https://boards.greenhouse.io/mozilla/jobs/1916139'>Job Application for Senior Site Reliability Engineer at Mozilla</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/snowflakecomputing/jobs/4410616002'>Job Application for Senior Site Reliability Engineer at Snowflake</a></h5> 
+<h5><a href='https://boards.greenhouse.io/snowflakecomputing/jobs/4410616002'>Job Application for Senior Site Reliability Engineer at Snowflake</a></h5> 
 <p><span class="badge badge-light">San Mateo, California United States</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
